feat(*): added prop types lib and context

--- a/src/styles/Car.scss
+++ b/src/styles/Car.scss
@@ -5,13 +5,13 @@
     padding: 10px;
     transition: .2s;
 
-//     border: 1px solid #ccc;
-//     box-shadow: 0 4px 5px 0 rgba(0,0,0,.14);
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14);
 
-//     &:hover {
-//         border: 1px solid #aaa;
-//         box-shadow: 0 4px 15px 0 rgba(0,0,0, .25);
-//     }
+    &:hover {
+        border: 1px solid #aaa;
+        box-shadow: 0 4px 15px 0 rgba(0,0,0, .25);
+    }
 }
 
 
